--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "motion": "^12.23.16",
     "next": "15.5.12",
     "next-themes": "^0.4.6",
-    "react": "^19.1.1",
-    "react-dom": "19.1.1",
+    "react": "19.2.4",
+    "react-dom": "19.2.4",
     "tailwind-merge": "^3.3.1",
     "three": "^0.180.0"
   },
